<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".AdminEmployeesFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_weight="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/prefixForEmployeeId"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/enterEmployeeId"
                        android:paddingLeft="20sp"
                        android:layout_marginTop="20sp">
                    </TextView>

                    <EditText
                        android:id="@+id/employeeId"
                        android:layout_width="250sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prefixForEmployeeName"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/enterEmployeeName"
                        android:paddingLeft="20sp"
                        android:layout_marginTop="20sp">
                    </TextView>

                    <EditText
                        android:id="@+id/employeeName"
                        android:layout_width="225sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prefixForEmployeeType"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/enterEmployeeType"
                        android:paddingLeft="20sp"
                        android:layout_marginTop="20sp">
                    </TextView>

                    <EditText
                        android:id="@+id/employeeType"
                        android:layout_width="230sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/prefixForEmployeeEmail"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Enter Employee Email:"
                        android:paddingLeft="20sp"
                        android:layout_marginTop="20sp">
                    </TextView>

                    <EditText
                        android:id="@+id/employeeEmail"
                        android:layout_width="225sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                    </EditText>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hold onto the buttons for tooltips!"
                    android:gravity="center"
                    android:layout_marginTop="20dp">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/addEmployeeBtn"
                        android:layout_width="@dimen/btn_width_small"
                        android:layout_height="@dimen/btn_height"
                        android:layout_gravity="center"
                        android:text="@string/addEmployeeBtn"
                        android:layout_margin="10dp"
                        android:tooltipText="All fields are required to be filled up">
                    </Button>

                    <Button
                        android:id="@+id/deleteEmployeeBtn"
                        android:layout_width="@dimen/btn_width_small"
                        android:layout_height="@dimen/btn_height"
                        android:layout_gravity="center"
                        android:text="@string/deleteEmployeeBtn"
                        android:layout_margin="10dp"
                        android:tooltipText="Only the Employee ID field is required to be filled up">
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/updateEmployeeBtn"
                        android:layout_width="@dimen/btn_width_small"
                        android:layout_height="@dimen/btn_height"
                        android:layout_gravity="center"
                        android:text="@string/updateEmployee"
                        android:layout_margin="10dp"
                        android:tooltipText="Only the Employee ID field is required to be filled up">
                    </Button>

                    <Button
                        android:id="@+id/displayEmployeesBtn"
                        android:layout_width="@dimen/btn_width_small"
                        android:layout_height="@dimen/btn_height"
                        android:layout_gravity="center"
                        android:text="@string/displayEmployees"
                        android:layout_margin="10dp"
                        android:tooltipText="A button to display all employees from the Firebase Realtime Database">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_weight="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/scrollView1">

        <TextView
            android:id="@+id/displayEmployeeDetails"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text=""
            android:paddingLeft="20sp"
            android:layout_marginTop="20sp">
        </TextView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>